Xmap 36 - получение текущего положения

--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -11,6 +11,7 @@
             defer th:if="${viewMode == 'YMAP'}"></script>
 
     <script src="/js/spot-list-map.js" defer></script>
+    <script src="/js/location-util.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <script src="/js/ymap.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <link href="/styles/spot-list-map.css" rel="stylesheet">
 </head>
