--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -11,7 +11,7 @@
             defer th:if="${viewMode == 'YMAP'}"></script>
     <script src="/js/location-util.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <script src="/js/ymap.js" defer th:if="${viewMode == 'YMAP'}"></script>
-    <link href="/styles/spot-list-map.css" rel="stylesheet">
+    <link href="/css/spot-list-map.css" rel="stylesheet">
 </head>
 <body>
     <main layout:fragment="content">
