--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,11 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico" />
 
+    <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="/css/vars/dark-theme.css" rel="stylesheet">
+    <!--    <link href="/css/themes/light.css" rel="stylesheet">-->
+    <link href="/css/vars/global.css" rel="stylesheet">
     <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/themes/light.css" rel="stylesheet">
-    <link href="/css/themes/dark.css" rel="stylesheet">
     <link href="/css/nav.css" rel="stylesheet">
+
+
+
 
 </head>
 <body>
