--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -8,15 +8,15 @@
     <title>Sign-in страница</title>
 </head>
 <body>
-<div layout:fragment="content">
-    <h2>Войдите в учетную запись</h2>
+<div layout:fragment="content" class="content">
+    <h2 class="header-title">Вход</h2>
     <div th:if="${param.error}">
         Неверное имя или пароль</div>
     <div th:if="${param.logout}">
         Вы вышли</div>
-    <div th:replace="fragments/forms/sign-in :: form">
+    <form th:replace="fragments/forms/sign-in :: form">
         place for custom sign-in form
-    </div>
+    </form>
 </div>
 </body>
 </html>
