--- a/src/main/resources/static/css/vars/dark-theme.css
+++ b/src/main/resources/static/css/vars/dark-theme.css
@@ -11,6 +11,7 @@
     --input-submit-btn-bg-color: #ff912b;
     --input-submit-btn-color: #ffffff;
     --link-to-sign-up-color: #888487;
+    --input-msg-error-color: #ff0000;
 
     /* bottom menu */
     --active-menu-icon-color: #eea241;
