Xmap 36 - дизайн sign-up v1

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -57,7 +57,8 @@ body {
     margin-top: 20px;
 }
 
-.sign-in-form .link-to-sign-up {
+.sign-in-form .link-to-sign-up,
+.sign-up-form .link-to-sign-in {
     color: var(--link-to-sign-up-color);
     font-size: 16px;
     margin: 20px auto 0 auto;
