--- a/src/main/resources/templates/fragments/forms/sign-up.html
+++ b/src/main/resources/templates/fragments/forms/sign-up.html
@@ -7,24 +7,33 @@
   <title>Sign-up form fragment</title>
 </head>
 <body>
-  <form layout:fragment="form" th:object="${user}" action="/sign-up" method="post">
+  <form layout:fragment="form" th:object="${user}" action="/sign-up" method="post"
+        class="form sign-up-form">
     <!-- Сообщения об ошибках -->
-    <div th:if="${#fields.hasErrors('*')}" style="color: red;">
-      Произошли ошибки при заполнении формы.<br/>
-      <ul>
-        <li th:each="err : ${#fields.errors('*')}">[[${err}]]</li>
-      </ul>
+<!--    <div th:if="${#fields.hasErrors('*')}" style="color: red;">-->
+<!--      Произошли ошибки при заполнении формы.<br/>-->
+<!--      <ul>-->
+<!--        <li th:each="err : ${#fields.errors('*')}">[[${err}]]</li>-->
+<!--      </ul>-->
+<!--    </div>-->
+
+    <div class="input-label">
+      <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+           class="input-msg-error">ошибка валидации логина</div>
+      <label for="username" class="input-label__label">Логин:</label>
+      <input type="text" id="username" th:field="*{username}" class="input-label__input"/>
     </div>
 
-    <label for="username">Логин:</label><br/>
-    <input type="text" id="username" th:field="*{username}"/>
-    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" style="color: red;">Ошибка!</span><br/><br/>
+    <div class="input-label">
+      <div th:if="${#fields.hasErrors('rawPassword')}" th:errors="*{rawPassword}"
+           class="input-msg-error">ошибка валидации пароля</div>
+      <label for="rawPassword" class="input-label__label">Пароль:</label>
+      <input type="password" id="rawPassword" th:field="*{rawPassword}" class="input-label__input"/>
+    </div>
 
-    <label for="rawPassword">Пароль:</label><br/>
-    <input type="password" id="rawPassword" th:field="*{rawPassword}"/>
-    <span th:if="${#fields.hasErrors('rawPassword')}" th:errors="*{rawPassword}" style="color: red;">Ошибка!</span><br/><br/>
 
-    <button type="submit">Зарегистрироваться</button>
+    <button type="submit" class="input-submit-btn">Зарегистрироваться</button>
+    <a href="/sign-in" class="link-to-sign-in">Войти</a>
   </form>
 </body>
 </html>
