--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div layout:fragment="content">
-        <h2>Регистрация</h2>
-        <div th:replace="fragments/forms/sign-up :: form">
+        <h2 class="header-title">Регистрация</h2>
+        <form th:replace="fragments/forms/sign-up :: form">
             place for custom sign-up form
-        </div>
+        </form>
     </div>
 </body>
 </html>
