--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,10 +15,7 @@
     <link href="/css/vars/global.css" rel="stylesheet">
     <link href="/css/common.css" rel="stylesheet">
     <link href="/css/nav.css" rel="stylesheet">
-
-
-
-
+    <script src="/js/scrollbar.js" defer></script>
 </head>
 <body>
     <main layout:fragment="content">
