--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -9,9 +9,30 @@ body {
 }
 
 .content {
-    height: calc(100vh - var(--nav-menu-height));
+    height: calc(100dvh - var(--nav-menu-height));
     background: var(--page-bg-color);
-    overflow: auto;
+    margin-bottom: var(--nav-menu-height);
+}
+
+.content {
+    width: 100%;
+    /*height: 200%;*/
+    overflow: auto; /* Включает скроллинг */
+    scrollbar-width: thin; /* Для Firefox */
+    scrollbar-color: transparent transparent; /* Для Firefox */
+    transition: scrollbar-color 0.3s ease;
+}
+
+/* Для Webkit-браузеров (Chrome, Safari) */
+.content::-webkit-scrollbar {
+    width: 8px;
+    opacity: 0; /* Скроллбар невидим по умолчанию */
+    transition: opacity 0.3s ease;
+}
+
+.content::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5); /* Цвет скроллбара */
+    border-radius: 10px;
 }
 
 .header-title {
@@ -22,7 +43,7 @@ body {
 }
 
 .form {
-    padding: 8px;
+    padding: 0 8px 25px 8px;
 }
 
 .input-label {
