--- a/src/main/resources/templates/spot-adding-request.html
+++ b/src/main/resources/templates/spot-adding-request.html
@@ -12,11 +12,11 @@
     <script src="/js/ymap-point.js" defer></script>
 </head>
 <body>
-<div layout:fragment="content">
-    <h2>Создание заявки на добавление спота</h2>
-    <div th:replace="fragments/forms/spot-adding-request :: form">
+<div layout:fragment="content" class="content">
+    <h2 class="header-title">Добавление спота</h2>
+    <form th:replace="fragments/forms/spot-adding-request :: form">
         place for custom spot-adding-request form
-    </div>
+    </form>
 </div>
 </body>
 </html>
