--- a/src/main/resources/static/css/normalize.css
+++ b/src/main/resources/static/css/normalize.css
@@ -347,3 +347,21 @@ template {
 [hidden] {
     display: none;
 }
+
+/* Custom */
+
+ul {
+    list-style: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ol, ul {
+    padding-left: 0;
+}
