--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -14,7 +14,7 @@
     <link href="/css/spot-list-map.css" rel="stylesheet">
 </head>
 <body>
-    <main layout:fragment="content">
+    <main layout:fragment="content" class="content">
         <div class="search-block">
             <div class="search-block__search">
                 <input class="search-block__input" type="text" placeholder="Поиск"/>
