--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -16,8 +16,8 @@
     </script>
 </head>
 <body>
-<div layout:fragment="content">
-    <h2 th:text="${spotAddingRequest.spotName()}"></h2>
+<div layout:fragment="content" class="content">
+    <h2 th:text="${spotAddingRequest.spotName()}" class="header-title"></h2>
     <div>
         <div th:if="${#lists.isEmpty(spotAddingRequest.spotImageLinks())}">
             Картинки для спота отсутствуют
