--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -8,8 +8,8 @@
     <title>Spot страница</title>
 </head>
 <body>
-    <div layout:fragment="content">
-        <h2 th:text="${spot.name()}"></h2>
+    <div layout:fragment="content" class="content">
+        <h2 th:text="${spot.name()}" class="header-title"></h2>
         <div>
             <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
                 Картинки для спота отсутствуют
