--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -25,7 +25,8 @@
         </div>
         <div th:if="${not #lists.isEmpty(spotAddingRequest.spotImageLinks())}"
              id="spotImageCarouselWithIndicators" class="carousel slide" data-bs-interval="false">
-            <div class="carousel-indicators">
+            <div th:if="${#lists.size(spotAddingRequest.spotImageLinks()) > 1}"
+                 class="carousel-indicators">
                 <button th:each="imageLink,iterStat : ${spotAddingRequest.spotImageLinks()}"
                         type="button" data-bs-target="#spotImageCarouselWithIndicators"
                         th:data-bs-slide-to="${iterStat.index}"
@@ -41,11 +42,15 @@
                     <img th:src="${imageLink}" class="spot-adding-request__carousel-img" alt="spot image">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="prev">
+            <button th:if="${#lists.size(spotAddingRequest.spotImageLinks()) > 1}"
+                    class="carousel-control-prev" type="button"
+                    data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="next">
+            <button th:if="${#lists.size(spotAddingRequest.spotImageLinks()) > 1}"
+                    class="carousel-control-next" type="button"
+                    data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -61,6 +66,7 @@
     <div th:text="${spotAddingRequest.status()}"></div>
     <div th:text="${spotAddingRequest.adderId()}"></div>
     <div th:text="${spotAddingRequest.acceptorId()}"></div>
+    <div th:text="${spotAddingRequest.city()}"></div>
 </div>
 
 </body>
