--- a/src/main/resources/static/css/spot-adding-request-instance.css
+++ b/src/main/resources/static/css/spot-adding-request-instance.css
@@ -3,3 +3,46 @@
     width: 100%;
     height: 350px;
 }
+
+.spot-adding-request__info {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    color: var(--spot-adding-request-text-info-color);
+    font-size: 18px;
+}
+
+.spot-adding-request__info-header {
+    font-size: 22px;
+    margin-top: 10px;
+}
+
+.spot-adding-request__info-header {
+    margin-top: 15px;
+    padding-top: 15px;
+    border-top: 1px solid var(--spot-adding-request-border-content-block-color);
+}
+
+.spot-adding-request__info-status {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+}
+
+.spot-adding-request__btn-reject {
+    margin-left: 10px;
+}
+
+.spot-adding-request__acceptor-management {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    justify-items: center;
+}
+
+.spot-adding-request__info-desc {
+    text-indent: 32px;
+    text-align: justify;
+}
